--- a/submissions/Westley_Dana/Assignment1/A1.Rmd
+++ b/submissions/Westley_Dana/Assignment1/A1.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "DataViz-A1"
 author: "Dana Westley"
+date: "Due 4/10/2017"
 output: github_document
 ---
 
@@ -32,7 +33,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 My visualization:
-``` {r}
+``` {r, echo = FALSE}
+
 biden <- read.csv("/Users/Dana/Desktop/biden.csv")
 library(ggplot2)
 
@@ -51,6 +53,7 @@ biden$party = factor(biden$party, levels = c(0,1), labels = c("Republican","Demo
 library(dplyr)
 library(RColorBrewer)
 
+#changing from counts to percents
 biden %>% count(party = factor(party), warmth = factor(warmth)) %>% 
     mutate(pct = prop.table(n) * 100) %>% 
     ggplot(aes(x = party, y = pct, fill = warmth)) + 
@@ -63,14 +66,23 @@ biden %>% count(party = factor(party), warmth = factor(warmth)) %>%
               size = 3)
 ```
 
+# Visualization Explanation
+  The story I am trying to tell is that most people like Joe Biden. He's a likeable guy! But what is really interesting is *how* much they like him. Democrats have very warm feelings toward him, with only about 5% of Demoncrat respondents reporting any level of cold feelings for him at all. Republicans had a larger proportion of people who said they felt cold feelings toward him, about 28%, but even this is not a majority of Republican attitudes. The majority of Republicans, 59%, have slightly warm feelings for Joe. While the majoirty of Democrats are split either in slightly warm, 44%, or extremely warm, 50%. There is also much more variance among the Republican responses than the Democrat's.
+  I chose a bar chart because after running some initial descriptive scatterplots to get a sense of the data, I realized there were far too many entries to treat as points. When I added a smoothing line to the scatterplots, it was misleading since the data was so varied. It did not accurately tell any significant story. I knew that I wanted to capture some of the categorical/ demographic variables in my visualization so I started to factor variables such as gender and political party. I believed I may use one or more of these as different channels later on. I originally wanted to use the feelings thermometer as my y measure, and this seemed logical since it was the measured, or dependent variable. However, I ended up using counts (actually, percentages) as my y-axis. I realized this would be necessary when I noticed the responses clustering around intervals such as 0, 25, 50, 75, 100. So instead, I created a new categorical variable to measure peoples attitudes as opposed to the discrete continuous scale original with the data.
+  I decided to focus on the feelings ratings and political party. To me, this told the most relevant story. It also sort of surprised me, since we might think that people instinctually dislike members of opposing parties, which was not what the results showed. Originally, I plotted the warmth counts per feelings category on the x-axis and used color to disitnguish poltical party and then used dodge to position the bars side by side. This representation was misleading because the data had more Republican responses overall, so their bars were higher and made it appear like that group had MORE favoriable feelings to Joe, which isnt true. So I flipped the two (now using party on the x axis and warmth as the color channel) and got a rough version of my final visualizaiton. However, I still had the problem of unequal group numbers. I knew I had to use percentages as my y-axis to create the most truthful visualization. 
+  To be honest, I tried and could not figure out how to do this on my own. Fortunately, others on (www.stackoverflow.com) had the same question. I still had to modify the code I found there which, for some reason, left counts as the y-axis and just put percentage labels over the bars. This produced a weird image where 17% on the republican bars was as high as 3% on the democrat bars. But after some tweaking, I scaled the y-axis using percentages. I was happy with the final product and felt that it was at the very least, truthful. 
+  In terms of beauty, I will admit my visualization looks like something spit out from excel, but it is clean and simple, and I even changed the colors to a palette I thought better represented warmth (reds and yellows). Some things I would like to do in the future would be to apply a theme, center the title, and remove the grey background. 
+  I believe the story I told is clear and moderately interesting. In terms of being enlightening, I think if I had actually run an analysis looking for an interaction between party affiliation and another variable such as gender or age, the visualization would have more practical use in terms of target demographics for campaigning. However, I still feel I learned something important, that if you're as likeable a guy as Joe Biden, this is can overpower party loyalty.
+  
 
-
-
-I found the way to scale to percetages from (http://stackoverflow.com/questions/3695497/show-instead-of-counts-in-charts-of-categorical-variables)
+## References
+I found the way to scale to percetages from (http://stackoverflow.com/questions/3695497/show-instead-of-counts-in-charts-of-categorical-variables) ended up not using this because if gave me percents out of the total respondants and not per party. It was the same problem as the counts and made the Republican results appear "bigger" than they were.
 
 fixing percentages by group and adding percent labels found here: (http://stackoverflow.com/revisions/40250493/2)
 
-I also used the ggplot R-Studio cheat sheet from (https://www.rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf)
+I also used the ggplot R-Studio cheat sheet from: (https://www.rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf)
+
+color palette chosen here: (http://www.sthda.com/english/wiki/ggplot2-colors-how-to-change-colors-automatically-and-manually#use-rcolorbrewer-palettes)
 
 
 
