--- a/submissions/Westley_Dana/Assignment1/A1.Rmd
+++ b/submissions/Westley_Dana/Assignment1/A1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DataViz-A1"
+title: "DataViz - Assignment 1"
 author: "Dana Westley"
 date: "Due 4/10/2017"
 output: github_document
@@ -12,7 +12,9 @@ knitr::opts_chunk$set(echo = TRUE)
 # Part 1: Visualization critique (5 points)
 
   The visualization I chose was created by John Nelson using data from a partnership between the National Drought Mitigation Center at the University of Nebraska-Lincoln, the USDA, and NOAA studying the duration and severity of droughts in the continental U.S. Here is the link to the map. (https://adventuresinmapping.com/2016/07/12/five-years-of-drought/) I will be discussing the very first image that appears on the page, "Five+Years of Drought"
-	  
+
+![](https://adventuresinmapping.files.wordpress.com/2016/07/droughtintensityandduration.jpg)
+
 ## Is it truthful?
   Considering the sources of the data, we can be pretty confident that the dataset is, at least, accurate. When it comes to the truthfulness of the visualization, as we discussed in class, I would also say that it meets our criteria. It uses a map of the U.S. to plot geographic data. It also uses two channels that we as human beings are pretty good at distinguishing: color and size. The color represents the intensity of the drought, getting darker with severity, and the size correlates with the duration of drought in the area, with larger points identifying long-lasting droughts. The image is not misleading and conveys the information it is meant to.
 	  
@@ -69,9 +71,13 @@ biden %>% count(party = factor(party), warmth = factor(warmth)) %>%
 # Visualization Explanation
   The story I am trying to tell is that most people like Joe Biden. He's a likeable guy! But what is really interesting is *how* much they like him. Democrats have very warm feelings toward him, with only about 5% of Demoncrat respondents reporting any level of cold feelings for him at all. Republicans had a larger proportion of people who said they felt cold feelings toward him, about 28%, but even this is not a majority of Republican attitudes. The majority of Republicans, 59%, have slightly warm feelings for Joe. While the majoirty of Democrats are split either in slightly warm, 44%, or extremely warm, 50%. There is also much more variance among the Republican responses than the Democrat's.
   I chose a bar chart because after running some initial descriptive scatterplots to get a sense of the data, I realized there were far too many entries to treat as points. When I added a smoothing line to the scatterplots, it was misleading since the data was so varied. It did not accurately tell any significant story. I knew that I wanted to capture some of the categorical/ demographic variables in my visualization so I started to factor variables such as gender and political party. I believed I may use one or more of these as different channels later on. I originally wanted to use the feelings thermometer as my y measure, and this seemed logical since it was the measured, or dependent variable. However, I ended up using counts (actually, percentages) as my y-axis. I realized this would be necessary when I noticed the responses clustering around intervals such as 0, 25, 50, 75, 100. So instead, I created a new categorical variable to measure peoples attitudes as opposed to the discrete continuous scale original with the data.
+  
   I decided to focus on the feelings ratings and political party. To me, this told the most relevant story. It also sort of surprised me, since we might think that people instinctually dislike members of opposing parties, which was not what the results showed. Originally, I plotted the warmth counts per feelings category on the x-axis and used color to disitnguish poltical party and then used dodge to position the bars side by side. This representation was misleading because the data had more Republican responses overall, so their bars were higher and made it appear like that group had MORE favoriable feelings to Joe, which isnt true. So I flipped the two (now using party on the x axis and warmth as the color channel) and got a rough version of my final visualizaiton. However, I still had the problem of unequal group numbers. I knew I had to use percentages as my y-axis to create the most truthful visualization. 
+  
   To be honest, I tried and could not figure out how to do this on my own. Fortunately, others on (www.stackoverflow.com) had the same question. I still had to modify the code I found there which, for some reason, left counts as the y-axis and just put percentage labels over the bars. This produced a weird image where 17% on the republican bars was as high as 3% on the democrat bars. But after some tweaking, I scaled the y-axis using percentages. I was happy with the final product and felt that it was at the very least, truthful. 
+  
   In terms of beauty, I will admit my visualization looks like something spit out from excel, but it is clean and simple, and I even changed the colors to a palette I thought better represented warmth (reds and yellows). Some things I would like to do in the future would be to apply a theme, center the title, and remove the grey background. 
+  
   I believe the story I told is clear and moderately interesting. In terms of being enlightening, I think if I had actually run an analysis looking for an interaction between party affiliation and another variable such as gender or age, the visualization would have more practical use in terms of target demographics for campaigning. However, I still feel I learned something important, that if you're as likeable a guy as Joe Biden, this is can overpower party loyalty.
   
 
