--- a/notes/day5-notes.Rmd
+++ b/notes/day5-notes.Rmd
@@ -50,6 +50,93 @@ set.seed(1234)
     * Is this literally just the data? Don't we need gridlines or axes? What else can be considered integral to the graph?
 * He never offers proof of his hypothesis that less is better
 
+### What is integral?
+
+```{r integral}
+p <- ggplot(mpg, aes(cty, hwy)) +
+  geom_point()
+p
+```
+
+* Data points
+* Axis ticks
+* Axis tick labels
+* Axis labels
+* Background
+* Grid lines
+
+What happens if we strip away everything except the data?
+
+```{r integral-void}
+p + theme_void()
+```
+
+Hmm, so what do we actually need to keep? What should we consider "integral"? What if we remove the background color?
+
+```{r integral-background}
+p + theme_bw()
+```
+
+* Remove panel box
+
+```{r integral-panelbox}
+p + theme_bw() +
+    theme(panel.background = element_blank(),
+          panel.border = element_blank())
+```
+
+* Remove minor grid lines
+
+```{r integral-minor}
+p + theme_bw() +
+    theme(panel.background = element_blank(),
+          panel.border = element_blank(),
+          strip.background = element_blank(),
+          plot.background = element_blank(),
+          axis.line = element_blank(),
+          panel.grid.minor = element_blank())
+```
+
+* Remove all grid lines
+
+```{r integral-major}
+p + theme_bw() +
+    theme(panel.background = element_blank(),
+          panel.border = element_blank(),
+          strip.background = element_blank(),
+          plot.background = element_blank(),
+          axis.line = element_blank(),
+          panel.grid = element_blank())
+```
+
+* Remove tick marks
+
+```{r integral-tick}
+p + theme_bw() +
+    theme(panel.background = element_blank(),
+          panel.border = element_blank(),
+          strip.background = element_blank(),
+          plot.background = element_blank(),
+          axis.line = element_blank(),
+          panel.grid = element_blank(),
+          axis.ticks = element_blank())
+```
+
+* Use serif font
+
+```{r integral-serif}
+p + theme_bw(base_family = "serif") +
+    theme(panel.background = element_blank(),
+          panel.border = element_blank(),
+          strip.background = element_blank(),
+          plot.background = element_blank(),
+          axis.line = element_blank(),
+          panel.grid = element_blank(),
+          axis.ticks = element_blank())
+```
+
+What have we lost? Is this easier to interpret? Harder?
+
 ## Chart junk
 
 * Vibrating moire effects
@@ -391,14 +478,16 @@ qfplot(
 
 ### Wordles/wordclouds
 
-```{r get-trump}
+```{r auth-twitter, cache = FALSE}
 library(twitteR)
 library(tidytext)
 
 # setup API authentication
 setup_twitter_oauth(getOption("twitter_api_key"),
                     getOption("twitter_api_token"))
+```
 
+```{r get-trump}
 # get fresh trump tweets
 trump <- userTimeline("realDonaldTrump", n = 3200) %>%
   twListToDF %>%
@@ -431,13 +520,43 @@ trump_token %>%
 * How does it advance the goals (or not) of Tufte/Gelman/Unwin?
 * How does it advance the goals (or not) of Nigel Holmes?
 
-### Decision tree: the Obama-Clinton divide
+```{r pope-tweets}
+# get tweets
+pope <- userTimeline("Pontifex", n = 3200) %>%
+  twListToDF %>%
+  as_tibble
 
-![](http://graphics8.nytimes.com/images/2008/04/16/us/0416-nat-subOBAMA.jpg)
+# tokenize
+pope_token <- pope %>%
+  filter(!str_detect(text, '^"')) %>%
+  mutate(text = str_replace_all(text, "https://t.co/[A-Za-z\\d]+|&amp;", "")) %>%
+  unnest_tokens(word, text, token = "regex", pattern = reg) %>%
+  filter(!word %in% stop_words$word,
+         str_detect(word, "[a-z]"))
+```
+
+```{r trump-pope}
+library(reshape2)
+
+bind_rows(Trump = trump_token, Pope = pope_token, .id = "person") %>%
+  count(word, person) %>%
+  acast(word ~ person, value.var = "n", fill = 0) %>%
+  comparison.cloud(max.words = 100, colors = c("blue", "red"))
+```
+
+The size of a word’s text is in proportion to its frequency within its category (i.e. proportion of all Trump tweets or all pope tweets). We can use this visualization to see the most frequent words/hashtags by President Trump and Pope Francis, but the sizes of the words are not comparable across sentiments.
 
 * What does this graph do well?
 * How does it advance the goals (or not) of Tufte/Gelman/Unwin?
 * How does it advance the goals (or not) of Nigel Holmes?
+
+```{r trump-pope-scatter}
+bind_rows(Trump = trump_token, Pope = pope_token, .id = "person") %>%
+  count(word, person) %>%
+  spread(person, n, fill = 0) %>%
+  ggplot(aes(Pope, Trump, label = word)) +
+  geom_text()
+```
 
 ### Health-care spending and life expectancy
 
@@ -449,6 +568,13 @@ trump_token %>%
 * What are the advantages/disadvantages to the first plot?
 * What are the advantages/disadvantages to the second plot?
 
+### Two Americas
+
+* [The Two Americas of 2016](https://www.nytimes.com/interactive/2016/11/16/us/politics/the-two-americas-of-2016.html?_r=1)
+
+### Marrying age
+
+* [Marrying Age: This is when Americans get married](http://flowingdata.com/2016/03/03/marrying-age/)
 
 # Session Info {.toc-ignore}
 
